--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
+    "@radix-ui/react-slot": "^1.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-toggle": "^4.1.3",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
